Support down to API 9

--- a/ndk_busybox.config
+++ b/ndk_busybox.config
@@ -795,7 +795,7 @@ CONFIG_RAIDAUTORUN=y
 CONFIG_RFKILL=y
 # CONFIG_RUNLEVEL is not set
 CONFIG_RX=y
-CONFIG_SETFATTR=y
+# CONFIG_SETFATTR is not set
 CONFIG_SETSERIAL=y
 CONFIG_STRINGS=y
 CONFIG_TIME=y
