Fix segfault using sh and errors in wget

--- a/ndk_busybox.config
+++ b/ndk_busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.28.0
-# Sat Jan 27 23:36:47 2018
+# Busybox version: 1.28.4
+# Sat Jun  9 14:16:24 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -943,7 +943,7 @@ CONFIG_FEATURE_WGET_STATUSBAR=y
 CONFIG_FEATURE_WGET_AUTHENTICATION=y
 CONFIG_FEATURE_WGET_TIMEOUT=y
 CONFIG_FEATURE_WGET_HTTPS=y
-CONFIG_FEATURE_WGET_OPENSSL=y
+# CONFIG_FEATURE_WGET_OPENSSL is not set
 CONFIG_WHOIS=y
 CONFIG_ZCIP=y
 CONFIG_UDHCPD=y
