--- a/ndk_busybox.config
+++ b/ndk_busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.28.4
-# Sat Jun  9 14:16:24 2018
+# Busybox version: 1.29.2
+# Sat Aug 11 15:18:16 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -52,6 +52,7 @@ CONFIG_EXTRA_CFLAGS="-DANDROID -D__ANDROID__ -DSK_RELEASE -Os -fno-short-enums -
 CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
 # CONFIG_USE_PORTABLE_CODE is not set
+CONFIG_STACK_OPTIMIZATION_386=y
 
 #
 # Installation Options ("make install" behavior)
@@ -90,6 +91,7 @@ CONFIG_MD5_SMALL=1
 CONFIG_SHA3_SMALL=1
 CONFIG_FEATURE_FAST_TOP=y
 # CONFIG_FEATURE_ETC_NETWORKS is not set
+# CONFIG_FEATURE_ETC_SERVICES is not set
 CONFIG_FEATURE_EDITING=y
 CONFIG_FEATURE_EDITING_MAX_LEN=1024
 CONFIG_FEATURE_EDITING_VI=y
@@ -100,6 +102,7 @@ CONFIG_FEATURE_EDITING_HISTORY=255
 CONFIG_FEATURE_TAB_COMPLETION=y
 # CONFIG_FEATURE_USERNAME_COMPLETION is not set
 CONFIG_FEATURE_EDITING_FANCY_PROMPT=y
+CONFIG_FEATURE_EDITING_WINCH=y
 # CONFIG_FEATURE_EDITING_ASK_TERMINAL is not set
 # CONFIG_LOCALE_SUPPORT is not set
 CONFIG_UNICODE_SUPPORT=y
@@ -149,6 +152,7 @@ CONFIG_UNXZ=y
 CONFIG_XZCAT=y
 CONFIG_XZ=y
 CONFIG_BZIP2=y
+CONFIG_BZIP2_SMALL=8
 CONFIG_FEATURE_BZIP2_DECOMPRESS=y
 CONFIG_CPIO=y
 CONFIG_FEATURE_CPIO_O=y
@@ -286,6 +290,7 @@ CONFIG_FEATURE_FANCY_SLEEP=y
 CONFIG_FEATURE_FLOAT_SLEEP=y
 CONFIG_SORT=y
 CONFIG_FEATURE_SORT_BIG=y
+# CONFIG_FEATURE_SORT_OPTIMIZE_MEMORY is not set
 CONFIG_SPLIT=y
 CONFIG_FEATURE_SPLIT_FANCY=y
 CONFIG_STAT=y
@@ -477,6 +482,7 @@ CONFIG_FEATURE_XARGS_SUPPORT_ARGS_FILE=y
 # CONFIG_HALT is not set
 CONFIG_POWEROFF=y
 CONFIG_REBOOT=y
+CONFIG_FEATURE_WAIT_FOR_INIT=y
 # CONFIG_FEATURE_CALL_TELINIT is not set
 CONFIG_TELINIT_PATH=""
 # CONFIG_INIT is not set
@@ -704,6 +710,7 @@ CONFIG_FEATURE_VOLUMEID_FAT=y
 CONFIG_FEATURE_VOLUMEID_HFS=y
 CONFIG_FEATURE_VOLUMEID_ISO9660=y
 CONFIG_FEATURE_VOLUMEID_JFS=y
+CONFIG_FEATURE_VOLUMEID_LFS=y
 CONFIG_FEATURE_VOLUMEID_LINUXRAID=y
 CONFIG_FEATURE_VOLUMEID_LINUXSWAP=y
 CONFIG_FEATURE_VOLUMEID_LUKS=y
@@ -780,6 +787,8 @@ CONFIG_FEATURE_LESS_WINCH=y
 CONFIG_FEATURE_LESS_ASK_TERMINAL=y
 CONFIG_FEATURE_LESS_DASHCMD=y
 CONFIG_FEATURE_LESS_LINENUMS=y
+CONFIG_FEATURE_LESS_RAW=y
+CONFIG_FEATURE_LESS_ENV=y
 CONFIG_LSSCSI=y
 CONFIG_MAKEDEVS=y
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
@@ -899,6 +908,8 @@ CONFIG_NETSTAT=y
 CONFIG_FEATURE_NETSTAT_WIDE=y
 CONFIG_FEATURE_NETSTAT_PRG=y
 CONFIG_NSLOOKUP=y
+CONFIG_FEATURE_NSLOOKUP_BIG=y
+CONFIG_FEATURE_NSLOOKUP_LONG_OPTIONS=y
 # CONFIG_NTPD is not set
 # CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_FEATURE_NTPD_CONF is not set
@@ -909,6 +920,8 @@ CONFIG_PSCAN=y
 CONFIG_ROUTE=y
 CONFIG_SLATTACH=y
 CONFIG_SSL_CLIENT=y
+CONFIG_TC=y
+CONFIG_FEATURE_TC_INGRESS=y
 CONFIG_TCPSVD=y
 CONFIG_UDPSVD=y
 CONFIG_TELNET=y
@@ -960,6 +973,7 @@ CONFIG_UDHCPC6=y
 CONFIG_FEATURE_UDHCPC6_RFC3646=y
 CONFIG_FEATURE_UDHCPC6_RFC4704=y
 CONFIG_FEATURE_UDHCPC6_RFC4833=y
+CONFIG_FEATURE_UDHCPC6_RFC5970=y
 
 #
 # Common options for DHCP applets
@@ -1046,6 +1060,7 @@ CONFIG_SETUIDGID=y
 # CONFIG_SV is not set
 CONFIG_SV_DEFAULT_SERVICE_DIR=""
 CONFIG_SVC=y
+CONFIG_SVOK=y
 # CONFIG_SVLOGD is not set
 # CONFIG_CHCON is not set
 # CONFIG_GETENFORCE is not set
@@ -1074,6 +1089,8 @@ CONFIG_ASH=y
 CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
 CONFIG_ASH_INTERNAL_GLOB=y
 CONFIG_ASH_BASH_COMPAT=y
+# CONFIG_ASH_BASH_SOURCE_CURDIR is not set
+CONFIG_ASH_BASH_NOT_FOUND_HOOK=y
 CONFIG_ASH_JOB_CONTROL=y
 CONFIG_ASH_ALIAS=y
 CONFIG_ASH_RANDOM_SUPPORT=y
@@ -1090,6 +1107,8 @@ CONFIG_CTTYHACK=y
 CONFIG_HUSH=y
 CONFIG_HUSH_BASH_COMPAT=y
 CONFIG_HUSH_BRACE_EXPANSION=y
+CONFIG_HUSH_LINENO_VAR=y
+# CONFIG_HUSH_BASH_SOURCE_CURDIR is not set
 CONFIG_HUSH_INTERACTIVE=y
 # CONFIG_HUSH_SAVEHISTORY is not set
 CONFIG_HUSH_JOB=y
@@ -1110,6 +1129,7 @@ CONFIG_HUSH_EXPORT_N=y
 CONFIG_HUSH_READONLY=y
 CONFIG_HUSH_KILL=y
 CONFIG_HUSH_WAIT=y
+CONFIG_HUSH_COMMAND=y
 CONFIG_HUSH_TRAP=y
 CONFIG_HUSH_TYPE=y
 CONFIG_HUSH_TIMES=y
