Disable CONFIG_FEATURE_SUID to workaround seccomp on Android 9.0

--- a/busybox.config
+++ b/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.2
-# Sat Aug 11 15:18:16 2018
+# Sun Aug 12 17:35:38 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -26,9 +26,9 @@ CONFIG_PID_FILE_PATH="/var/run"
 CONFIG_BUSYBOX=y
 CONFIG_FEATURE_INSTALLER=y
 CONFIG_INSTALL_NO_USR=y
-CONFIG_FEATURE_SUID=y
-CONFIG_FEATURE_SUID_CONFIG=y
-CONFIG_FEATURE_SUID_CONFIG_QUIET=y
+# CONFIG_FEATURE_SUID is not set
+# CONFIG_FEATURE_SUID_CONFIG is not set
+# CONFIG_FEATURE_SUID_CONFIG_QUIET is not set
 # CONFIG_FEATURE_PREFER_APPLETS is not set
 CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_SELINUX is not set
