--- a/busybox.config
+++ b/busybox.config
@@ -1162,7 +1162,7 @@ CONFIG_FEATURE_SH_EXTRA_QUIET=y
 # CONFIG_FEATURE_SH_NOFORK is not set
 CONFIG_FEATURE_SH_READ_FRAC=y
 CONFIG_FEATURE_SH_HISTFILESIZE=y
-CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
+# CONFIG_FEATURE_SH_EMBEDDED_SCRIPT is not set
 
 #
 # System Logging Utilities
