Update config to add mtd-utils flash* applets

--- a/busybox.config
+++ b/busybox.config
@@ -768,9 +768,9 @@ CONFIG_CRONTAB=y
 # CONFIG_FEATURE_DEVFS is not set
 CONFIG_DEVMEM=y
 CONFIG_FBSPLASH=y
-# CONFIG_FLASH_ERASEALL is not set
-# CONFIG_FLASH_LOCK is not set
-# CONFIG_FLASH_UNLOCK is not set
+CONFIG_FLASH_ERASEALL=y
+CONFIG_FLASH_LOCK=y
+CONFIG_FLASH_UNLOCK=y
 # CONFIG_FLASHCP is not set
 CONFIG_HDPARM=y
 CONFIG_FEATURE_HDPARM_GET_IDENTITY=y
