--- a/busybox.config
+++ b/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.31.1
-# Mon Jan 20 18:24:20 2020
+# Sat May  2 01:29:37 2020
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -185,7 +185,7 @@ CONFIG_FEATURE_TAR_GNU_EXTENSIONS=y
 CONFIG_FEATURE_TAR_TO_COMMAND=y
 CONFIG_FEATURE_TAR_UNAME_GNAME=y
 CONFIG_FEATURE_TAR_NOPRESERVE_TIME=y
-# CONFIG_FEATURE_TAR_SELINUX is not set
+CONFIG_FEATURE_TAR_SELINUX=y
 CONFIG_UNZIP=y
 CONFIG_FEATURE_UNZIP_CDF=y
 CONFIG_FEATURE_UNZIP_BZIP2=y
@@ -1084,14 +1084,14 @@ CONFIG_CHCON=y
 CONFIG_GETENFORCE=y
 # CONFIG_GETSEBOOL is not set
 # CONFIG_LOAD_POLICY is not set
-CONFIG_MATCHPATHCON=y
+# CONFIG_MATCHPATHCON is not set
 CONFIG_RUNCON=y
 CONFIG_SELINUXENABLED=y
 CONFIG_SESTATUS=y
 CONFIG_SETENFORCE=y
 # CONFIG_SETFILES is not set
 # CONFIG_FEATURE_SETFILES_CHECK_OPTION is not set
-CONFIG_RESTORECON=y
+# CONFIG_RESTORECON is not set
 # CONFIG_SETSEBOOL is not set
 
 #
