--- a/busybox.config
+++ b/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.33.1
-# Thu May  6 15:44:23 2021
+# Busybox version: 1.34.1
+# Sat Oct  2 02:32:02 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -207,11 +207,13 @@ CONFIG_CHOWN=y
 CONFIG_FEATURE_CHOWN_LONG_OPTIONS=y
 CONFIG_CHROOT=y
 CONFIG_CKSUM=y
+CONFIG_CRC32=y
 CONFIG_COMM=y
 CONFIG_CP=y
 CONFIG_FEATURE_CP_LONG_OPTIONS=y
 CONFIG_FEATURE_CP_REFLINK=y
 CONFIG_CUT=y
+CONFIG_FEATURE_CUT_REGEX=y
 CONFIG_DATE=y
 CONFIG_FEATURE_DATE_ISOFMT=y
 CONFIG_FEATURE_DATE_NANO=y
@@ -316,7 +318,6 @@ CONFIG_TEST2=y
 CONFIG_FEATURE_TEST_64=y
 CONFIG_TIMEOUT=y
 CONFIG_TOUCH=y
-# CONFIG_FEATURE_TOUCH_NODEREF is not set
 CONFIG_FEATURE_TOUCH_SUSV3=y
 CONFIG_TR=y
 CONFIG_FEATURE_TR_CLASSES=y
@@ -424,6 +425,7 @@ CONFIG_VI=y
 CONFIG_FEATURE_VI_MAX_LEN=4096
 CONFIG_FEATURE_VI_8BIT=y
 CONFIG_FEATURE_VI_COLON=y
+CONFIG_FEATURE_VI_COLON_EXPAND=y
 CONFIG_FEATURE_VI_YANKMARK=y
 CONFIG_FEATURE_VI_SEARCH=y
 # CONFIG_FEATURE_VI_REGEX_SEARCH is not set
@@ -437,6 +439,7 @@ CONFIG_FEATURE_VI_ASK_TERMINAL=y
 CONFIG_FEATURE_VI_UNDO=y
 CONFIG_FEATURE_VI_UNDO_QUEUE=y
 CONFIG_FEATURE_VI_UNDO_QUEUE_MAX=256
+CONFIG_FEATURE_VI_VERBOSE_STATUS=y
 CONFIG_FEATURE_ALLOW_EXEC=y
 
 #
@@ -743,6 +746,7 @@ CONFIG_FEATURE_VOLUMEID_XFS=y
 # Miscellaneous Utilities
 #
 CONFIG_ADJTIMEX=y
+CONFIG_ASCII=y
 CONFIG_BBCONFIG=y
 CONFIG_FEATURE_COMPRESS_BBCONFIG=y
 # CONFIG_BC is not set
@@ -838,6 +842,7 @@ CONFIG_UBIUPDATEVOL=y
 CONFIG_UBIRENAME=y
 CONFIG_VOLNAME=y
 CONFIG_WATCHDOG=y
+# CONFIG_FEATURE_WATCHDOG_OPEN_TWICE is not set
 
 #
 # Networking Utilities
@@ -976,6 +981,7 @@ CONFIG_VCONFIG=y
 CONFIG_WGET=y
 CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 CONFIG_FEATURE_WGET_STATUSBAR=y
+CONFIG_FEATURE_WGET_FTP=y
 CONFIG_FEATURE_WGET_AUTHENTICATION=y
 CONFIG_FEATURE_WGET_TIMEOUT=y
 CONFIG_FEATURE_WGET_HTTPS=y
@@ -1001,6 +1007,7 @@ CONFIG_FEATURE_UDHCPC6_RFC5970=y
 #
 # Common options for DHCP applets
 #
+CONFIG_UDHCPC_DEFAULT_INTERFACE="eth0"
 CONFIG_FEATURE_UDHCP_PORT=y
 CONFIG_UDHCP_DEBUG=9
 CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=80
@@ -1136,8 +1143,8 @@ CONFIG_HUSH=y
 CONFIG_SHELL_HUSH=y
 CONFIG_HUSH_BASH_COMPAT=y
 CONFIG_HUSH_BRACE_EXPANSION=y
-CONFIG_HUSH_LINENO_VAR=y
 # CONFIG_HUSH_BASH_SOURCE_CURDIR is not set
+CONFIG_HUSH_LINENO_VAR=y
 CONFIG_HUSH_INTERACTIVE=y
 # CONFIG_HUSH_SAVEHISTORY is not set
 CONFIG_HUSH_JOB=y
