Enable `nsenter` applet

--- a/busybox.config
+++ b/busybox.config
@@ -671,7 +671,7 @@ CONFIG_FEATURE_MOUNT_FSTAB=y
 CONFIG_MOUNTPOINT=y
 CONFIG_NOLOGIN=y
 CONFIG_NOLOGIN_DEPENDENCIES=y
-# CONFIG_NSENTER is not set
+CONFIG_NSENTER=y
 CONFIG_PIVOT_ROOT=y
 CONFIG_RDATE=y
 CONFIG_RDEV=y
