Update patches and config

--- a/busybox.config
+++ b/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Tue May 23 17:20:45 2023
+# Mon Jul 15 18:16:39 2024
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -94,8 +94,8 @@ CONFIG_FEATURE_BUFFERS_USE_MALLOC=y
 CONFIG_PASSWORD_MINLEN=6
 CONFIG_MD5_SMALL=1
 CONFIG_SHA1_SMALL=3
-CONFIG_SHA1_HWACCEL=1
-CONFIG_SHA256_HWACCEL=1
+# CONFIG_SHA1_HWACCEL is not set
+# CONFIG_SHA256_HWACCEL is not set
 CONFIG_SHA3_SMALL=1
 # CONFIG_FEATURE_NON_POSIX_CP is not set
 CONFIG_FEATURE_VERBOSE_CP_MESSAGE=y
@@ -298,7 +298,7 @@ CONFIG_MV=y
 CONFIG_NICE=y
 CONFIG_NL=y
 CONFIG_NOHUP=y
-# CONFIG_NPROC is not set
+CONFIG_NPROC=y
 CONFIG_OD=y
 CONFIG_PASTE=y
 CONFIG_PRINTENV=y
@@ -325,7 +325,7 @@ CONFIG_FEATURE_STAT_FILESYSTEM=y
 CONFIG_STTY=y
 CONFIG_SUM=y
 CONFIG_SYNC=y
-# CONFIG_FEATURE_SYNC_FANCY is not set
+CONFIG_FEATURE_SYNC_FANCY=y
 CONFIG_FSYNC=y
 CONFIG_TAC=y
 CONFIG_TAIL=y
@@ -481,7 +481,7 @@ CONFIG_FEATURE_FIND_DELETE=y
 CONFIG_FEATURE_FIND_EMPTY=y
 CONFIG_FEATURE_FIND_PATH=y
 CONFIG_FEATURE_FIND_REGEX=y
-# CONFIG_FEATURE_FIND_CONTEXT is not set
+CONFIG_FEATURE_FIND_CONTEXT=y
 CONFIG_FEATURE_FIND_LINKS=y
 CONFIG_GREP=y
 CONFIG_EGREP=y
@@ -503,9 +503,9 @@ CONFIG_FEATURE_XARGS_SUPPORT_ARGS_FILE=y
 # CONFIG_FEATURE_BOOTCHARTD_BLOATED_HEADER is not set
 # CONFIG_FEATURE_BOOTCHARTD_CONFIG_FILE is not set
 # CONFIG_HALT is not set
-CONFIG_POWEROFF=y
-CONFIG_REBOOT=y
-CONFIG_FEATURE_WAIT_FOR_INIT=y
+# CONFIG_POWEROFF is not set
+# CONFIG_REBOOT is not set
+# CONFIG_FEATURE_WAIT_FOR_INIT is not set
 # CONFIG_FEATURE_CALL_TELINIT is not set
 CONFIG_TELINIT_PATH=""
 # CONFIG_INIT is not set
@@ -613,7 +613,7 @@ CONFIG_DMESG=y
 CONFIG_FEATURE_DMESG_PRETTY=y
 CONFIG_EJECT=y
 CONFIG_FEATURE_EJECT_SCSI=y
-# CONFIG_FALLOCATE is not set
+CONFIG_FALLOCATE=y
 CONFIG_FATATTR=y
 CONFIG_FBSET=y
 CONFIG_FEATURE_FBSET_FANCY=y
@@ -661,11 +661,11 @@ CONFIG_MESG=y
 CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP=y
 CONFIG_MKE2FS=y
 CONFIG_MKFS_EXT2=y
-CONFIG_MKFS_MINIX=y
-CONFIG_FEATURE_MINIX2=y
-CONFIG_MKFS_REISER=y
-CONFIG_MKDOSFS=y
-CONFIG_MKFS_VFAT=y
+# CONFIG_MKFS_MINIX is not set
+# CONFIG_FEATURE_MINIX2 is not set
+# CONFIG_MKFS_REISER is not set
+# CONFIG_MKDOSFS is not set
+# CONFIG_MKFS_VFAT is not set
 CONFIG_MKSWAP=y
 CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
@@ -968,8 +968,8 @@ CONFIG_PSCAN=y
 CONFIG_ROUTE=y
 CONFIG_SLATTACH=y
 CONFIG_SSL_CLIENT=y
-# CONFIG_TC is not set
-# CONFIG_FEATURE_TC_INGRESS is not set
+CONFIG_TC=y
+CONFIG_FEATURE_TC_INGRESS=y
 CONFIG_TCPSVD=y
 CONFIG_UDPSVD=y
 CONFIG_TELNET=y
@@ -1208,7 +1208,7 @@ CONFIG_FEATURE_SH_EXTRA_QUIET=y
 # CONFIG_FEATURE_SH_STANDALONE is not set
 # CONFIG_FEATURE_SH_NOFORK is not set
 CONFIG_FEATURE_SH_READ_FRAC=y
-CONFIG_FEATURE_SH_HISTFILESIZE=y
+# CONFIG_FEATURE_SH_HISTFILESIZE is not set
 CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
 
 #
